@startuml

title __STATES's Class Diagram__\n

  namespace creatures {
    namespace states {
      class creatures.states.Attack {
          - canAttack : boolean
          + Attack()
          + init()
          + update()
      }
    }
  }
  

  namespace creatures {
    namespace states {
      abstract class creatures.states.EnemyState {
          {static} # distanceToAttack : int
          {static} # distanceToFollow : int
          # horizontalSpeed : float
          {abstract} + init()
          {abstract} + update()
      }
    }
  }
  

  namespace creatures {
    namespace states {
      class creatures.states.Follow {
          + Follow()
          + init()
          + update()
      }
    }
  }
  

  namespace creatures {
    namespace states {
      class creatures.states.Waiting {
          + Waiting()
          + init()
          + update()
      }
    }
  }
  

  creatures.states.Attack -up-|> creatures.states.EnemyState
  creatures.states.EnemyState o-- creatures.Enemy : thisEnemy
  creatures.states.Follow -up-|> creatures.states.EnemyState
  creatures.states.Waiting -up-|> creatures.states.EnemyState


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
